2003-02-18  Juanma Barranquero  <lektu@terra.es>

	* ietf-drums.el (ietf-drums-remove-whitespace): Fix character
	constant.

2003-02-14  Juanma Barranquero  <lektu@terra.es>

	* mm-uu.el (mm-uu-dissect): Fix use of character constant.

2003-02-11  Stefan Monnier  <monnier@cs.yale.edu>

	* nntp.el (nntp-accept-process-output): Don't use point-max to get
	the buffer's size.

2003-01-31  Joe Buehler  <jhpb@draco.hekimian.com>

	* nnheader.el: Added cygwin to system-type comparisons.

2003-01-27  Juanma Barranquero  <lektu@terra.es>

	* imap.el (imap-mailbox-status): Fix typo.

2003-01-16  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-alter-header-function): Add type and group.

2003-01-15  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el: Don't use `path'.

	* nnsoup.el (nnsoup-file-name): Ditto.

	* nnmail.el (nnmail-pathname-coding-system): Ditto.
	(nnmail-group-pathname): Ditto.

	* nnimap.el (nnimap-group-overview-filename): Ditto.

	* nnheader.el (nnheader-pathname-coding-system): Ditto.
	(nnheader-group-pathname): Ditto.

	* nnfolder.el (nnfolder-group-pathname): Ditto.

	* gnus.el (gnus-home-directory): Ditto.

	* gnus-group.el (gnus-group-icon-list): Ditto.

2003-01-04  Kim F. Storm  <storm@cua.dk>

	* message.el (message-split-line): New function.
	(message-mode-map): Remap split-line to message-split-line.

2002-11-29  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* smiley-ems.el (gnus-smiley-display): Typo.

	* nnvirtual.el: Typo.

	* nnsoup.el (nnsoup-retrieve-headers): Typo.

	* nnmail.el (nnmail-split, nnmail-process-unix-mail-format): Typos.

	* nnimap.el: Typo.
	(nnimap-split-rule, nnimap-find-minmax-uid): Typos.

	* mm-encode.el (mm-safer-encoding): Typo.

	* messcompat.el: Typo.

	* message.el (message-face-alist): Typo.

	* imap.el (imap-interactive-login, imap-anonymous-auth)
	(imap-open): Typos.

	* ietf-drums.el (ietf-drums-text-token, ietf-drums-qtext-token): Typos.

	* gnus.el: Typo.

	* gnus-win.el (gnus-configure-frame): Typo.
